# auden

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml
.dist/css/: output.css
.dist/js/: app.js
assets/: package.json  pnpm-lock.yaml  tailwind.config.js
assets/css/: input.css
assets/js/: app.js
auden/: __init__.py  __main__.py  app.py
templates/: base.html.jinja  index.html.jinja  post.html.jinja  user.html.jinja
