[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "auden"
authors = [{name = "Nafi Amaan Hossain"}]
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
]
dynamic = ["version", "description"]

dependencies = [
	"click",
	"litestar[jinja, brotli, cryptography, jwt]",
	"uvicorn[standard]"
]